--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,10 +143,11 @@
     <Button
         android:id="@+id/btnOn2"
         android:layout_width="84dp"
-        android:layout_height="51dp"
+        android:layout_height="55dp"
         android:backgroundTint="#910000"
         android:onClick="MusicOn"
         android:text="Music Off"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.788"
@@ -156,11 +157,12 @@
 
     <Button
         android:id="@+id/btnStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="84dp"
+        android:layout_height="55dp"
         android:backgroundTint="#001275"
         android:onClick="Start"
         android:text="Start"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -171,10 +173,11 @@
     <Button
         android:id="@+id/btnOn"
         android:layout_width="84dp"
-        android:layout_height="51dp"
+        android:layout_height="55dp"
         android:backgroundTint="#4CAF50"
         android:onClick="MusicOn"
         android:text="Music on"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.204"
